Implementing splash screen

--- a/02-Frameworks-And-Libraries/react-native-course/basic/app.json
+++ b/02-Frameworks-And-Libraries/react-native-course/basic/app.json
@@ -4,18 +4,20 @@
     "slug": "basic",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/coffee-icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
     },
+
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#fff"
+      },
+      "package": "com.dev_waqas.basic"
     },
     "web": {
       "bundler": "metro",
@@ -27,10 +29,10 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "image": "./assets/images/splash-coffee.png",
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#000000",
+          "imageWidth": 200
         }
       ]
     ],
